--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,146 @@
     transform: rotate(360deg);
   }
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  outline: none;
+}
+body {
+  background: url(./bg4.png) center center/cover no-repeat fixed;
+  direction: rtl;
+}
+.container {
+  max-width: 1250px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+/* player  */
+
+.player {
+  z-index: 1;
+  background: #134e5e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #71b280,
+    #134e5e
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #71b280,
+    #134e5e
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  position: sticky;
+  top: 0;
+  padding: 20px;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+.player .ayah {
+  padding: 10px 0;
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+}
+.player audio {
+  width: 100%;
+  height: 40px;
+  margin: 15px 0;
+}
+.player .buttons {
+  display: flex;
+  justify-content: space-around;
+}
+.buttons .icon {
+  width: 60px;
+  height: 60px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  color: #13162f;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+/* surahs  */
+.surahs .sura-lonely {
+  color: #23162f;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  font-weight: bold;
+  width: calc(100% - 90px);
+  transition: 0.3s color ease;
+  cursor: pointer;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  position: relative;
+  font-size: 20px;
+  counter-increment: surah-counter;
+}
+.surahs .sura-lonely::after {
+  content: counter(surah-counter);
+  position: absolute;
+  height: 60px;
+  width: 60px;
+  top: 50%;
+  left: -90px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+  font-size: 25px;
+  line-height: 60px;
+  text-align: center;
+  background-color: inherit;
+  transition: inherit;
+  box-shadow: inherit;
+}
+.sura-lonely::before {
+  content: "";
+  position: absolute;
+  border: 7px solid transparent;
+  border-right-color: #23162f;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -14px;
+}
+.sura-lonely:hover,
+.sura-lonely:hover::after {
+  background: #134e5e; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #71b280,
+    #134e5e
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #71b280,
+    #134e5e
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: #fff;
+}
+
+.download {
+  position: absolute;
+  left: 5%;
+  top: 20%;
+  font-size: 40px;
+}
+.download:hover {
+  background-color: #fff;
+}
+.mainNavbar {
+  position: relative;
+}
+.myCards{
+  display:inline-block;
+  position: relative;
+  margin-top: 5%;
+  margin-right: 5%;
+
+}
