--- a/src/App.css
+++ b/src/App.css
@@ -2,41 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 * {
   padding: 0;
   margin: 0;
@@ -44,7 +9,8 @@
   outline: none;
 }
 body {
-  background: url(./bg4.png) center center/cover no-repeat fixed;
+  background: url("https://images.unsplash.com/photo-1575645513913-c002ea3b2e01?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=773&q=80")
+    center center/cover no-repeat fixed;
   direction: rtl;
 }
 .container {
@@ -172,10 +138,9 @@ body {
 .mainNavbar {
   position: relative;
 }
-.myCards{
-  display:inline-block;
+.myCards {
+  display: inline-block;
   position: relative;
   margin-top: 5%;
   margin-right: 5%;
-
 }
